Add transaction for class loading. Add toString for lazy class. Store parent and subclasses as sets, not lists. Init base classes eagerly. Move inheritance management on class level, not on schema level.